# NTMDTRead.py

./: .gitattributes  .gitignore  .gitlab-ci.yml  .travis.yml  MDT Structure.rtf  ReadMe.md  pyproject.toml  setup.cfg  setup.py
.ci/: before.sh  setupKS.sh
.reuse/: dep5
NTMDTRead/: NDimData.py  NT-MDTFileSchema.ini  NTMDTReader.py  NTMDTReaderTSV.py  colors.py  kaitaiParseBase.py
NTMDTRead/kaitai/: f10le.py  ieee754_float.py  nt_mdt.py  nt_mdt_256.py  nt_mdt_color_table.py  nt_mdt_pal.py
NTMDTRead/palettes/: __init__.py
NTMDTRead/utils/: softwarePaths.py  units.py  units.txt
examples/: matplotlibColorMapConvert.py  show.py
